# Flowbit-AI-Internship-Project

./: .gitattributes  README.md  main.py  output.json  pyproject.toml
pro/agents/: .env  classifier_agent.py  email_agent.py  json_agent.py  pdf_agent.py
pro/mcp/: server.py  tools.py
pro/memory/: memory.py
pro/model/: Classify.py  Customer.py  Flowbit.py  Memory.py  Metadata.py  Request.py
pro/utils/: memory.py
project/agents/: classifier_agent.py  email_agent.py  json_agent.py  pdf_agent.py
project/mcp/: server.py  tools.py
project/memory/: memory.py
project/mock_crm/: server.py
project/model/: Flowbit.py  Request.py
